Removed links to Ollie code.

--- a/index.html
+++ b/index.html
@@ -110,9 +110,6 @@
         </p>
         <ul>
             <li>
-            Download <a href="http://knowitall.cs.washington.edu/ollie/ollie-app-latest.jar">the latest binaries</a>
-            </li>
-            <li>
             Read 
             <a href="http://www.cs.washington.edu/homes/mausam/papers/emnlp12a.pdf">Open Language Learning for Information Extraction</a>
             </li>
@@ -121,16 +118,7 @@
 
         <h2>Code</h2>
         <p>
-        Ollie is written in the <a href="http://www.scala-lang.org">Scala programming language</a> and is released 
-        under the full GPL3 because it depends on <a href="http://nlp.stanford.edu/software/corenlp.shtml">Stanford CoreNLP</a>.
-        For instructions on how to run Ollie or use it in your own code,
-        please see the <a href="https://github.com/knowitall/ollie/blob/master/README.md">README in the source distribution</a>.
-        </p>
-        <ul>
-            <li><a href="https://github.com/knowitall/ollie/">Ollie (on github)</a></li>
-            <li><a href="https://github.com/knowitall/ollie/blob/master/README.md">README</a></li>
-            <li><a href="http://www.gnu.org/copyleft/gpl.html">License (GPLv3)</a></li>
-        </ul>
+        Unfortunately, the Ollie code is not yet available due to some licensing concerns.
 
         <h2>Credits</h2>
         <p>
