--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             <li><a href="http://www.schmitztech.com/">Michael Schmitz</a></li>
             <li>Robert Bart</li>
             <li><a href="http://www.cs.washington.edu/homes/soderlan/">Stephen Soderland</a></li>
+            <li><a href="http://www.cs.washington.edu/homes/etzioni/">Oren Etzioni</a></li>
         </ul>
         <p>
         Ollie uses the following code and models, which are included
