Changed index page.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,18 @@
 
         <h2>Code</h2>
         <p>
-        Unfortunately, the Ollie code is not yet available due to some licensing concerns.
+        Unfortunately, the Ollie code is not yet available, but it will be soon.
+        </p>
+
+        <h2>Data</h2>
+        <p>
+        <ul>
+            <li><a href="http://knowitall.cs.washington.edu/ollie/data/lemmagrap.txt.bzip2">Seed (sentence, extraction) pairs</a></li>
+            <li><a href="http://knowitall.cs.washington.edu/ollie/data/patterned-all.txt.bzip2">Bootstrapping set of parse patterns.</a>  Please note that this was developed for the paper.  Since then, the dependency graph serialization has changed.  Also, this set is reduced with some filters before the model is constructed.</li>
+            <li><a href="http://knowitall.cs.washington.edu/ollie/data/openparse-paper.model">Model used for the paper.</a>  The present model included with Ollie has been enhanced.</li>
+            <li><a href="http://knowitall.cs.washington.edu/ollie/data/annotations.tar.bzip2">Annotations used for evaluation</a></li>
+        </ul>
+        </p>
 
         <h2>Credits</h2>
         <p>
@@ -137,10 +148,13 @@
         </p>
         <ul>
             <li>
-            <a href="http://nlp.stanford.edu/software/corenlp.shtml">Stanford CoreNLP</a>
+            <a href="http://www.scalanlp.org/">Breeze</a>
             </li>
             <li>
-            <a href="http://www.cs.waikato.ac.nz/ml/weka/">Weka</a>
+            <a href="http://www.maltparser.org/">Malt Parser</a>
+            </li>
+            <li>
+            <a href="http://opennlp.apache.org/">OpenNLP</a>
             </li>
         </ul>
 
