--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
         <h2>Data</h2>
         <p>
         <ul>
-            <li><a href="http://knowitall.cs.washington.edu/ollie/data/lemmagrap.txt.bzip2">Seed (sentence, extraction) pairs</a></li>
-            <li><a href="http://knowitall.cs.washington.edu/ollie/data/patterned-all.txt.bzip2">Bootstrapping set of parse patterns.</a>  Please note that this was developed for the paper.  Since then, the dependency graph serialization has changed.  Also, this set is reduced with some filters before the model is constructed.</li>
+            <li><a href="http://knowitall.cs.washington.edu/ollie/data/lemmagrap.txt.bz2">Seed (sentence, extraction) pairs</a></li>
+            <li><a href="http://knowitall.cs.washington.edu/ollie/data/patterned-all.txt.bz2">Bootstrapping set of parse patterns.</a>  Please note that this was developed for the paper.  Since then, the dependency graph serialization has changed.  Also, this set is reduced with some filters before the model is constructed.</li>
             <li><a href="http://knowitall.cs.washington.edu/ollie/data/openparse-paper.model">Model used for the paper.</a>  The present model included with Ollie has been enhanced.</li>
-            <li><a href="http://knowitall.cs.washington.edu/ollie/data/annotations.tar.bzip2">Annotations used for evaluation</a></li>
+            <li><a href="http://knowitall.cs.washington.edu/ollie/data/annotations.tar.bz2">Annotations used for evaluation</a></li>
         </ul>
         </p>
 
@@ -136,7 +136,7 @@
         Ollie was authored and developed by the following people at <a href="http://turing.cs.washington.edu/">the University of Washington's Turing Center</a> as part of <a href="http://www.cs.washington.edu/research/knowitall/">the KnowItAll Project</a>:
         </p>
         <ul>
-            <li><a href="http://www.cs.washington.edu/homes/mausam/"></a>Mausam</li>
+            <li><a href="http://www.cs.washington.edu/homes/mausam/">Mausam</a></li>
             <li><a href="http://www.schmitztech.com/">Michael Schmitz</a></li>
             <li>Robert Bart</li>
             <li><a href="http://www.cs.washington.edu/homes/soderlan/">Stephen Soderland</a></li>
