Expose github source.

--- a/index.html
+++ b/index.html
@@ -111,14 +111,28 @@
         <ul>
             <li>
             Read 
-            <a href="http://www.cs.washington.edu/homes/mausam/papers/emnlp12a.pdf">Open Language Learning for Information Extraction</a>
+            <a href="http://www.cs.washington.edu/homes/mausam/papers/emnlp12a.pdf">Open Language Learning for Information Extraction</a>.
+            </li>
+            <li>
+            Download
+            <a href="http://knowitall.cs.washington.edu/ollie/ollie-app-latest.jar">the binaries</a>.
+            </li>
+            <li>
+            Check out
+            <a href="https://github.com/knowitall/ollie">the source code</a>.
             </li>
         </ul>
 
-
+        <h2>Binaries</h2>
+        If you want to run Ollie on a small amount of text without modifying the source code, you can use an executable file that can be run from the command line. Follow these steps to get started:
+        <ol>
+        <li> Download <a href="http://knowitall.cs.washington.edu/ollie/ollie-app-latest.jar">the latest Ollie binary</a>.</li>
+        <li> Download <a href="http://www.maltparser.org/mco/english_parser/engmalt.linear-1.7.mco">the linear English MaltParser model</a> (engmalt.linear-1.7.mco) and place it in the same directory as Ollie.</li>
+        <li> Run <pre>java -Xmx512m -jar ollie-app-latest.jar yourfile.txt</pre>. Omit the input file for an interactive console.</li>
+        </ol>
         <h2>Code</h2>
         <p>
-        Unfortunately, the Ollie code is not yet available, but it will be soon.
+        The Ollie source is <a href="https://github.com/knowitall/ollie">available on GitHub</a>.
         </p>
 
         <h2>Data</h2>
