--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         If you want to run Ollie on a small amount of text without modifying the source code, you can use an executable file that can be run from the command line. Follow these steps to get started:
         <ol>
         <li> Download <a href="http://knowitall.cs.washington.edu/ollie/ollie-app-latest.jar">the latest Ollie binary</a>.</li>
-        <li> Download <a href="http://www.maltparser.org/mco/english_parser/engmalt.linear-1.7.mco">the linear English MaltParser model</a> (engmalt.linear-1.7.mco) and place it in the same directory as Ollie.</li>
-        <li> Run <pre>java -Xmx512m -jar ollie-app-latest.jar yourfile.txt</pre>. Omit the input file for an interactive console.</li>
+        <li> Download <a href="http://www.maltparser.org/mco/english_parser/engmalt.linear-1.7.mco">the linear English MaltParser model</a> and place it in the same directory as Ollie.</li>
+        <li> Run <code>java -Xmx512m -jar ollie-app-latest.jar yourfile.txt</code>. Omit the input file for an interactive console.</li>
         </ol>
         <h2>Code</h2>
         <p>
@@ -141,7 +141,7 @@
             <li><a href="http://knowitall.cs.washington.edu/ollie/data/lemmagrep.txt.bz2">Seed (sentence, extraction) pairs</a></li>
             <li><a href="http://knowitall.cs.washington.edu/ollie/data/patterned-all.txt.bz2">Bootstrapping set of parse patterns.</a>  Please note that this was developed for the paper.  Since then, the dependency graph serialization has changed.  Also, this set is reduced with some filters before the model is constructed.</li>
             <li><a href="http://knowitall.cs.washington.edu/ollie/data/openparse-paper.model">Model used for the paper.</a>  The present model included with Ollie has been enhanced.</li>
-            <li><a href="http://knowitall.cs.washington.edu/ollie/data/annotations.tar.bz2">Annotations used for evaluation</a></li>
+            <li><a href="http://knowitall.cs.washington.edu/ollie/data/annotations.tar.bz2">Annotations used for evaluation</a>.  These were used to graph the precision recall curves.</li>
         </ul>
         </p>
 
