--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
         </ul>
         </p>
 
+        <h2>License</h2>
+        <p>
+        Ollie is licensed under a University of Washington <a href="https://raw.github.com/knowitall/ollie/master/LICENSE">Academic License</a>.
+        </p>
+
         <h2>Credits</h2>
         <p>
         Ollie was authored and developed by the following people at <a href="http://turing.cs.washington.edu/">the University of Washington's Turing Center</a> as part of <a href="http://www.cs.washington.edu/research/knowitall/">the KnowItAll Project</a>:
