Add link to the README.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <ul>
             <li>
             Read 
-            <a href="http://www.cs.washington.edu/homes/mausam/papers/emnlp12a.pdf">Open Language Learning for Information Extraction</a>.
+            <a href="http://www.cs.washington.edu/homes/mausam/papers/emnlp12a.pdf">the paper</a> or the <a href="https://github.com/schmmd/ollie/blob/master/README.md">README</a>.
             </li>
             <li>
             Download
@@ -119,7 +119,7 @@
             </li>
             <li>
             Check out
-            <a href="https://github.com/knowitall/ollie">the source code</a>.
+            <a href="https://github.com/knowitall/ollie">the source code</a> or read j.
             </li>
         </ul>
 
