Specify that Ollie takes one sentence per line.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <ol>
         <li> Download <a href="http://knowitall.cs.washington.edu/ollie/ollie-app-latest.jar">the latest Ollie binary</a>.</li>
         <li> Download <a href="http://www.maltparser.org/mco/english_parser/engmalt.linear-1.7.mco">the linear English MaltParser model</a> and place it in the same directory as Ollie.</li>
-        <li> Run <code>java -Xmx512m -jar ollie-app-latest.jar yourfile.txt</code>. Omit the input file for an interactive console.</li>
+        <li> Run <code>java -Xmx512m -jar ollie-app-latest.jar yourfile.txt</code>.  The input file should contain one sentence per line unless <code>--split</code> is specified. Omit the input file for an interactive console.</li>
         </ol>
         <h2>Code</h2>
         <p>
