--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </li>
             <li>
             Check out
-            <a href="https://github.com/knowitall/ollie">the source code</a> or read j.
+            <a href="https://github.com/knowitall/ollie">the source code</a>.
             </li>
         </ul>
 
